add create user final

--- a/junsBank/src/main/resources/application.properties
+++ b/junsBank/src/main/resources/application.properties
@@ -25,3 +25,27 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cvreviewbaconbao@gmail.com
+spring.mail.password=wvun ghlo dvtb vlmj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+mail.smtp.debug=true
+
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# S? l?n th? l?i khi x?y ra l?i
+spring.kafka.listener.retry-attempts=3
+
+# Th?i gian ngh? gi?a các l?n th? l?i (??n v? là milliseconds)
+spring.kafka.listener.backoff-interval=1000
+
+# Tùy ch?n ?? retry cho t?t c? các l?i
+spring.kafka.listener.retry-mode=fixed
+
+# ?i?u ch?nh có nên d?ng vi?c retry khi ??t ??n s? l?n th? l?i t?i ?a
+spring.kafka.listener.auto-startup=true
